--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
-version: '3'
+version: '3' 
 services:
-  mongo:
+  database:
     image: mongo
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+      # Create a new database. Please note, the 
+      # /docker-entrypoint-initdb.d/init.js has to be executed
+      # in order for the database to be created 
       MONGO_INITDB_DATABASE: realestate
     volumes:
-      - ./dump/realestate:/dump/realestate-listing
-      - ./server/data:/dump/scripts
+      # Add the db-init.js file to the Mongo DB container
       - ./db-init.js:/docker-entrypoint-initdb.d/init.js:ro
     ports:
       - '27017-27019:27017-27019'
@@ -22,13 +24,17 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
+    depends_on:
+      - database
 
   web:
     build: .
     image: realestate-angularjs
     environment:
-      MONGODB_URI: mongodb://user:secretPassword@mongo/realestate
+      # Use the username and password found in the db-init.js file instead
+      # of the root username. 
+      MONGODB_URI: mongodb://user:secretPassword@database/realestate
     depends_on:
-      - mongo
+      - database
     ports:
       - 8082:5000
