--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       # Add the db-init.js file to the Mongo DB container
       - ./db-init.js:/docker-entrypoint-initdb.d/init.js:ro
+      - ./dump:/usr/src/data
     ports:
       - '27017-27019:27017-27019'
 
@@ -24,6 +25,7 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_SERVER: database
     depends_on:
       - database
 
@@ -34,7 +36,10 @@ services:
       # Use the username and password found in the db-init.js file instead
       # of the root username. 
       MONGODB_URI: mongodb://user:secretPassword@database/realestate
+    volumes:
+      - ./public:/usr/src/app/public
+      - ./server:/usr/src/app/server
     depends_on:
       - database
     ports:
-      - 8082:5000
+      - 8080:5000
