Updated versions of all dependencies; persist DB across restarts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3' 
+version: '3.2'
 services:
   database:
     image: mongo
@@ -11,7 +11,7 @@ services:
       # in order for the database to be created 
       MONGO_INITDB_DATABASE: realestate
     volumes:
-      # Add the db-init.js file to the Mongo DB container
+      - data:/data/db
       - ./db-init.js:/docker-entrypoint-initdb.d/init.js:ro
       - ./dump:/usr/src/data
     ports:
@@ -43,3 +43,5 @@ services:
       - database
     ports:
       - 8080:5000
+volumes:
+  data:
